# shankz-trader-damz-app

./: .gitignore  Makefile  README.md  SETUP.txt  pyproject.toml
configs/: strategies.yaml
tickers/ES/backtest/config/: default.yaml
tickers/ES/backtest/data/: ES_202603_1m.csv
tickers/ES/live/: config.yaml
tickers/MES/backtest/config/: default.yaml
tickers/MES/backtest/data/: MES_1m.csv
tickers/MES/live/: config.yaml
tickers/TQQQ/backtest/config/: default.yaml
tickers/TQQQ/live/: config.yaml
