[project]
name = "my-trading-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shankz-trader-bot",
    "shankz-trader-lib",
]

[tool.uv.sources]
shankz-trader-bot = { path = "../shankz-trader-bot", editable = true }
shankz-trader-lib = { path = "../shankz-trader-lib", editable = true }
